update some things

--- a/final/attributions.html
+++ b/final/attributions.html
@@ -5,14 +5,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FitStart | Attributions</title>
+    <meta name="description" content="A list of all external resources used in this project.">
+    <meta name="author" content="Amarilla Facundo">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+
+    <meta property="og:title" content="FitStart | Attributions">
+    <meta property="og:description" content="A list of all external resources used in this project.">
+    <meta property="og:image" content="https://amarillafacundo.github.io/wdd231/final/images/hero.webp">
+    <meta property="og:url" content="https://amarillafacundo.github.io/wdd231/final/attributions.html">
+    <meta property="og:type" content="website">
+    
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&family=Oswald:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <header>
-        <a href="index.html">
-            <img src="images/workout_home.png" alt="FitStart Logo" style="height: 50px;">
+        <a href="index.html" class="logo-link">
+            <img src="images/workout_home.png" alt="FitStart Logo">
         </a>
         <button id="menu-btn" aria-label="Menu">&#9776;</button>
     </header>
