--- a/final/form-action.html
+++ b/final/form-action.html
@@ -8,6 +8,12 @@
     <title>FitStart - Thank You</title>
     <meta name="description" content="Thank you for contacting FitStart. Your message has been received, and we will get back to you soon.">
     <meta name="author" content="Amarilla Facundo">
+
+    <meta property="og:title" content="FitStart - Thank You">
+    <meta property="og:description" content="Thank you for contacting FitStart. Your message has been received, and we will get back to you soon.">
+    <meta property="og:image" content="https://amarillafacundo.github.io/wdd231/final/images/hero.webp">
+    <meta property="og:url" content="https://amarillafacundo.github.io/wdd231/final/form-action.html">
+    <meta property="og:type" content="website">
     
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,8 +25,8 @@
 <body>
 
     <header>
-        <a href="index.html">
-            <img src="images/hero.webp" alt="Beginner Fitness Banner" class="hero-img" loading="lazy">
+        <a href="index.html" class="logo-link">
+            <img src="images/workout_home.png" alt="FitStart Logo">
         </a>
 
         <button id="menu-btn" aria-label="Menu">&#9776;</button>
