--- a/final/form.html
+++ b/final/form.html
@@ -25,7 +25,7 @@
 <body>
 
     <header>
-        <a href="index.html">
+        <a href="index.html" class="logo-link">
             <img src="images/hero.webp" alt="Beginner Fitness Banner" class="hero-img" loading="lazy">
         </a>
     
