--- a/final/habits.html
+++ b/final/habits.html
@@ -24,8 +24,8 @@
 
 <body>
     <header>
-        <a href="index.html">
-            <img src="images/hero.webp" alt="Beginner Fitness Banner" class="hero-img" loading="lazy">
+        <a href="index.html" class="logo-link">
+            <img src="images/workout_home.png" alt="FitStart Logo">
         </a>
         <button id="menu-btn" aria-label="Menu">&#9776;</button>
     </header>
