--- a/final/workouts.html
+++ b/final/workouts.html
@@ -25,7 +25,7 @@
 <body>
     <header>
     <a href="index.html" class="logo-link">
-        <img src="images/hero.webp" alt="Beginner Fitness Banner" class="hero-img" loading="lazy">
+        <img src="images/workout_home.png" alt="FitStart Logo">
         </a>
         <button id="menu-btn" aria-label="Menu">&#9776;</button>
     </header>
