update lazy in habits

--- a/final/habits.html
+++ b/final/habits.html
@@ -47,22 +47,22 @@
 
         <section class="habit-grid">
             <div class="habit-card">
-                <img src="images/hydration.webp" alt="Stay Hydrated">
+                <img src="images/hydration.webp" alt="Staying Hydrated" loading="lazy">
                 <h2>Stay Hydrated</h2>
                 <p>Drink at least 8 glasses of water per day to keep your body functioning well.</p>
             </div>
             <div class="habit-card">
-                <img src="images/nutrition.webp" alt="Eat Balanced Meals">
+                <img src="images/nutrition.webp" alt="Eat Balanced Meals" loading="lazy">
                 <h2>Balanced Nutrition</h2>
                 <p>Include vegetables, fruits, protein, and healthy fats in your daily diet.</p>
             </div>
             <div class="habit-card">
-                <img src="images/sleep.webp" alt="Get Enough Sleep">
+                <img src="images/sleep.webp" alt="Getting Enough Sleep" loading="lazy">
                 <h2>Quality Sleep</h2>
                 <p>Aim for 7-9 hours of sleep to help your body recover and stay energized.</p>
             </div>
             <div class="habit-card">
-                <img src="images/mindset.webp" alt="Positive Mindset">
+                <img src="images/mindset.webp" alt="Positive Mindset" loading="lazy">
                 <h2>Positive Mindset</h2>
                 <p>Stay motivated, set small goals, and celebrate your progress.</p>
             </div>
