--- a/final/form.html
+++ b/final/form.html
@@ -26,7 +26,7 @@
 
     <header>
         <a href="index.html" class="logo-link">
-            <img src="images/hero.webp" alt="Beginner Fitness Banner" class="hero-img" loading="lazy">
+            <img src="images/workout_home.png" alt="FitStart Logo">
         </a>
     
         <button id="menu-btn" aria-label="Menu">&#9776;</button>
