--- a/form.html
+++ b/form.html
@@ -33,7 +33,10 @@
     </header>
     
     <nav id="nav-menu" class="hidden">
-        <ul>
+        <ul><li><a href="index.html">Home</a></li>
+        <li><a href="workouts.html">Workouts</a></li>
+        <li><a href="habits.html">Healthy Habits</a></li>
+        <li><a href="form.html">Contact</a></li>
         </ul>
     </nav>
 
