update demostration video

--- a/final/attributions.html
+++ b/final/attributions.html
@@ -56,7 +56,7 @@
     <footer>
         <p>&copy; <span id="current-year"></span> FitStart. All rights reserved.</p>
         <a href="attributions.html">Attributions</a>
-        <a href="#">Project Video</a>
+        <a href="https://www.loom.com/share/c64934a883ee418091a55da891d6a6e2?sid=bcca0aef-ae44-4972-92ac-12d536f148eb"target="_blank">Project Demonstration Video</a>
     </footer>
 
     <script src="scripts/main.js"></script>
