--- a/final/habits.html
+++ b/final/habits.html
@@ -70,6 +70,7 @@
 
     <footer>
         <p>&copy; 2025 <span class="site-title">FitStart</span></p>
+        <a href="https://www.loom.com/share/c64934a883ee418091a55da891d6a6e2?sid=bcca0aef-ae44-4972-92ac-12d536f148eb"target="_blank">Project Demonstration Video</a>
     </footer>
 
     <script src="scripts/main.js" defer></script>
