--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -26,10 +26,10 @@
 <body class="discover">
     <header>
         <nav>
-            <a href="index.html" class="active">Home</a>
+            <a href="index.html">Home</a>
             <a href="directory.html">Directory</a>
             <a href="join.html">Join</a>
-            <a href="discover.html">Contact</a>
+            <a href="discover.html" class="active">Contact</a>
         </nav>
     </header>
 
