--- a/chamber/index.html
+++ b/chamber/index.html
@@ -27,10 +27,10 @@
 <body class="home">
     <header>
         <nav>
-            <a href="index.html" class="active">Home</a>
+            <a href="index.html">Home</a>
             <a href="directory.html">Directory</a>
             <a href="join.html">Join</a>
-            <a href="discover.html">Contact</a>
+            <a href="discover.html" class="active">Contact</a>
         </nav>
     </header>
 
